trying to fix zoom problem on mobile

--- a/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
@@ -51,10 +51,6 @@
     align-content: center;
     align-items: center;
     justify-content: center;
-    min-height: calc(
-      100% - var(--title-mobile-height) - var(--button-actionable-mobile-height) *
-        2 - var(--button-actionable-mobile-margin) * 3
-    );
   }
 }
 
